Bug 604723: Multiply onto (instead of replacing) our gfxContext matrix when painting SVG images. r=longsonr a=blocking