layout/svg/base/src/nsSVGImageFrame.cpp
@@ -258,7 +258,7 @@ nsSVGImageFrame::PaintSVG(nsSVGRenderState *aContext,
     // NOTE: To ensure that |width| and |height| don't accidentally
     // scale the user-unit size in SVG images, we apply those attributes
     // via |destRect|, not via our gfxContext's transform.
-    ctx->SetMatrix(GetImageTransform());
+    ctx->Multiply(GetImageTransform());
 
     // fill-opacity doesn't affect <image>, so if we're allowed to
     // optimize group opacity, the opacity used for compositing the
